tests/golden/type_errors/generic_struct_method_non_generic_impl.cd
struct Person { name: string }

impl Person<T> {
  fun get(): string {
    return this.name;
  }
}
