tests/golden/type_errors/generic_struct_method_non_generic_impl.err
Type error at 3:6: impl for non-generic struct `Person` cannot declare type parameters
  impl Person<T> {
       ^
